# dqar-client-kit

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  RELEASE.md  pyproject.toml  structure.txt
.claude/commands/: open.md
.github/workflows/: build.yml
config/: engagement.schema.json
docker/: .env.example  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CONFORMANCE_LEVELS.md  DBT_INTEGRATION.md  MANIFEST_SCHEMA.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UC_PROPERTIES.md
reports/: stage1a-medplum.json
scripts/: release_image.sh
shared/: engagement.py
specs/: 00-OVERVIEW.md  01-phase-1-cli-architecture.md  02-phase-2-data-conformance.md  03-phase-3-uc-properties.md  04-phase-4-dbt-lineage.md  05-phase-5-integration-orchestration.md  ACCEPTANCE_CRITERIA.md  DEPENDENCIES.md  DQAR_Bulk_FHIR_Extract_Specification_v1_0.docx  DQAR_Bulk_FHIR_Extract_Specification_v2_0.md  EXAMPLES.md  dqar-01-framework-summary.md  dqar-03-use-case-index.md  dqar-04-lineage-studies-methodology.md  dqar-05-source-inference-algorithm.md  dqar-06-uc1-app-technical-specification.md  dqar-client-kit-phases-02-to-05.md
stage1/: findings.py  orchestrate.py  preflight_check.py  report.py  stage1a2_bulk_fhir_extract_preflight.py  stage1a_bulk_fhir_export_preflight.py  stage1b_ndjson_validator.py  stage1c_fhir_uscore_validator.py
stage1/templates/: report.html
stage2/: anonymize_extract.py  redact.py
tests/: FIXTURE_ANALYSIS.md  build_compliant_reference.py  build_synthea_extracts.py  fixture_results.json  generate_fixtures.py  verify_stage2_redaction.py
tools/: bundle_upload.py  download_validator_cli.py  fetch_hapi_extract.py  pre_upload_check.py  provision_fhir_cache.py  synthea_to_ndjson.py
web/: app.py
web/templates/: upload.html
