[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdar-client-kit"
version = "0.1.1"
requires-python = ">=3.9"
description = "CDAR client-side conformance testing kit and local assessment server"
dependencies = [
    "cdar-contracts>=2.0.0,<3.0.0",
    "requests",
]

[tool.setuptools.packages.find]
include = ["shared*", "stage1*", "stage2*", "web*"]

[project.optional-dependencies]
web = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
]
report = [
    "anthropic",
    "jinja2",
    "weasyprint",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]
